; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs.c_myspiffs_vfs_closedir.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/spiffs/extr_spiffs.c_myspiffs_vfs_closedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfs_dir = type { i32 }

@d = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vfs_dir*)* @myspiffs_vfs_closedir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @myspiffs_vfs_closedir(%struct.vfs_dir* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vfs_dir*, align 8
  %4 = alloca i32, align 4
  store %struct.vfs_dir* %0, %struct.vfs_dir** %3, align 8
  %5 = load %struct.vfs_dir*, %struct.vfs_dir** %3, align 8
  %6 = call i32 @GET_DIR_D(%struct.vfs_dir* %5)
  %7 = load i32, i32* @d, align 4
  %8 = call i32 @SPIFFS_closedir(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load %struct.vfs_dir*, %struct.vfs_dir** %3, align 8
  %10 = bitcast %struct.vfs_dir* %9 to i8*
  %11 = call i32 @free(i8* %10)
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}

declare dso_local i32 @GET_DIR_D(%struct.vfs_dir*) #1

declare dso_local i32 @SPIFFS_closedir(i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
